--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -7,3 +7,4 @@ vich_uploader:
     annonces:
       uri_prefix: /public/images/annonces
       upload_destination: "%kernel.project_dir%/public/images/annonces"
+      namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
