--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,7 +32,7 @@ security:
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
   access_control:
-    # - { path: ^/admin, roles: ROLE_ADMIN }
+    - { path: ^/admin, roles: ROLE_ADMIN }
     - { path: ^/compte, roles: ROLE_USER }
 
 when@test:
@@ -44,6 +44,6 @@ when@test:
       # reduces the work factor to the lowest possible values.
       Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
         algorithm: auto
-        cost: 4 # Lowest possible value for bcrypt
-        time_cost: 3 # Lowest possible value for argon
+        cost: 12 # Lowest possible value for bcrypt
+        time_cost: 12 # Lowest possible value for argon
         memory_cost: 10 # Lowest possible value for argon
