--- a/.env
+++ b/.env
@@ -27,6 +27,6 @@ APP_SECRET=9bd0493912ebeed7aaf47392f7fe5f06
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql://root:@127.0.0.1:3306/reload"
+ DATABASE_URL="mysql://root:+ztu=rnU@127.0.0.1:3306/reload"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
